--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/supabase-js": "^2.49.9",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
