--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -36,9 +37,11 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.57.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
